--- a/src/app/heroes/heroes.component.less
+++ b/src/app/heroes/heroes.component.less
@@ -76,10 +76,9 @@
     position: relative;
     display: block;
     width: 250px;
-}
-
-.heroes a:hover {
-    color: #607D8B;
+    &:hover {
+        color: #607D8B;
+    }
 }
 
 .heroes .badge {
@@ -97,4 +96,24 @@
     text-align: right;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
+}
+
+button {
+    background-color: #eeeeee;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    cursor: hand;
+    font-family: Arial;
+    &:hover {
+        background-color: #cfd8dc;
+    }
+}
+button.delete {
+    position: relative;
+    left: 194px;
+    top: -32px;
+    background-color: gray !important;
+    color: #ffffff;
 }
